# pokedict2

./: .env.example  .gitignore  CLOUDFLARE_PAGES_SETUP.md  CLOUDFLARE_SETUP.md  D1_MIGRATION.md  DOCKER.md  GEMINI_SETUP.md  Makefile  QUICK_START.md  README.md  docker-compose.dev.yml  docker-compose.yml  download_icons.py  test_fix.sh  test_gemini.sh  test_team_builder.sh
backend/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
backend/src/: main.rs
backend/src/domain/: mod.rs
backend/src/domain/entity/: mod.rs  pokemon_form.rs  pokemon_spacies.rs  refresh_token.rs  team.rs  user.rs  user_pokemon.rs
backend/src/domain/valueobject/: counter.rs  effective.rs  email.rs  jwt.rs  (+9 more)
backend/src/handler/: auth_handler.rs  auth_middleware.rs  mod.rs  pokemon_master_handler.rs  team_handler.rs  user_handler.rs  user_pokemon_handler.rs
backend/src/repository/: mock_team_repository.rs  mock_user_repository.rs  mod.rs  postgres_pokemon_master_repository.rs  postgres_refresh_token_repository.rs  postgres_team_repository.rs  postgres_user_pokemon_repository.rs  postgres_user_repository.rs  refresh_token_repository.rs  team_repository.rs  user_pokemon_repository.rs  user_repository.rs
backend/src/usecase/: auth_service.rs  mod.rs  team_management.rs  user_login.rs  user_pokemon_management.rs  user_registration.rs
sync-pokeapi/: Cargo.toml  Makefile  README.md  migrate_to_3nf.sql  repair_forms.sh
sync-pokeapi/scripts/: resync_regional_forms.sh
sync-pokeapi/src/: form_localization.rs  main.rs  models.rs  pokeapi_client.rs  smogon_client.rs  smogon_models.rs
sync-pokeapi/src/domain/: mod.rs  pokemon_form.rs  pokemon_species.rs  team.rs  team_pokemon.rs  usage_stats.rs  user.rs  user_pokemon.rs
sync-pokeapi/src/repository/: mod.rs  pokemon_repository.rs  postgres_repository.rs  postgres_team_repository.rs  postgres_user_pokemon_repository.rs  postgres_user_repository.rs  team_repository.rs  user_pokemon_repository.rs  user_repository.rs
sync-pokeapi/src/usecase/: mod.rs  sync_service.rs  sync_smogon_service.rs
(+102 files in other folders)
