[package]
name = "sync-pokeapi"
version = "0.1.0"
edition = "2021"
description = "Pokemon data synchronization tool from PokeAPI to PostgreSQL"
license = "MIT"

[dependencies]
# HTTP client for PokeAPI
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async trait
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4.43", features = ["serde"] }
